--- a/src/main/resources/language/de.yml
+++ b/src/main/resources/language/de.yml
@@ -1,6 +1,6 @@
 # ====================================================
 #   TheMob - Hauptkonfiguration
 # ====================================================
-# Bossbar wird mit der zombie_boss.yml umgeschrieben
+# Bossbar wird mit der boss_template.yml umgeschrieben
 language: "de"          # Sprache: de / en / ... (für später)
 show-chat-messages: false   # Wenn false → keine Nachrichten im Chat senden
